<resources>
    <string name="app_name">智领传媒测控终端</string>
    <string name="user">用户校准</string>
    <string name="show">显示</string>
    <string name="input_prefill">AT+</string>
    <string name="input_hint">请输入蓝牙AT指令</string>
    <string name="Error">搜索失败</string>
    <string name="Complete">搜索完成</string>
    <string name="Upload">搜索设配</string>
    <string name="company_introduction">工业设备类： 非标自动化设备整合升级、测控系统研发，普通设备的数字化改造；\n汽车电器类：在线油位、油品质监测系统、电动无级调速直驱轮毂、锂电池大电流自动平衡系统、汽车主动防碰撞系统；\n智慧生活类：高安全性高可靠度电子锁具系统，全向POV彩色显示屏（应用于点对点广告平台或产品虚拟3D展示）；\n产品开发技术合作及售后联系：电话：18995692874、微信18995692874、QQ：1366817670；</string>
    <string name="login">登录</string>
    <string name="password_hint">请输入登录密码</string>
    <string name="name_hint">请输入登录账号</string>
    <string name="register">注册新用户</string>
    <string name="forget_password">忘记密码?</string>
    <string name="name_digits">请输入手机号</string>
    <string name="getcode">获取验证码</string>
    <string name="code_hint">请输入手机验证码</string>
    <string name="register_1">立即注册</string>
    <string name="toast_name_empet">用户名不能为空</string>
    <string name="toast_name_wrong">请输入登录账号</string>
    <string name="toast_psw_empet">密码不能为空</string>
    <string name="send_successful">手机验证码发送成功</string>
    <string name="send_failed">手机短信发送失败</string>
    <string name="toast_code_empet">验证码不能为空</string>
    <string name="toast_psw_wrong">请输入密码</string>
    <string name="toast_psw_short">密码不能小于6位</string>
    <string name="no_getcode">验证码无效</string>
    <string name="getcode_again">重新获取验证码</string>
    <string name="timer_message">秒后重新获取</string>
    <string name="bound_divices">已绑定设备</string>
    <string name="found_devices">发现新设备</string>
    <string name="offline_devices">离线设配</string>
    <string name="GIZ_SDK_PARAM_FORM_INVALID">SDK内部通讯数据格式无效</string>
    <string name="GIZ_SDK_CLIENT_NOT_AUTHEN">SDK正在启动</string>
    <string name="GIZ_SDK_CLIENT_VERSION_INVALID">无效的SDK版本号</string>
    <string name="GIZ_SDK_UDP_PORT_BIND_FAILED">UDP端口绑定失败</string>
    <string name="GIZ_SDK_DAEMON_EXCEPTION">SDK后台服务发生异常</string>
    <string name="GIZ_SDK_PARAM_INVALID">接口参数无效</string>
    <string name="GIZ_SDK_APPID_LENGTH_ERROR">AppID长度错误</string>
    <string name="GIZ_SDK_LOG_PATH_INVALID">SDK日志路径无效</string>
    <string name="GIZ_SDK_LOG_LEVEL_INVALID">日志级别无效</string>
    <string name="GIZ_SDK_DEVICE_CONFIG_SEND_FAILED">设备配网信息发送失败</string>
    <string name="GIZ_SDK_DEVICE_CONFIG_IS_RUNNING">设备配网正在执行</string>
    <string name="GIZ_SDK_DEVICE_CONFIG_TIMEOUT">设备配网超时</string>
    <string name="GIZ_SDK_DEVICE_DID_INVALID">设备DID无效</string>
    <string name="GIZ_SDK_DEVICE_MAC_INVALID">设备MAC无效</string>
    <string name="GIZ_SDK_SUBDEVICE_DID_INVALID">子设备DID无效</string>
    <string name="GIZ_SDK_DEVICE_PASSCODE_INVALID">设备验证码无效</string>
    <string name="GIZ_SDK_DEVICE_NOT_SUBSCRIBED">设备还未订阅</string>
    <string name="GIZ_SDK_DEVICE_NO_RESPONSE">设备无响应</string>
    <string name="GIZ_SDK_DEVICE_NOT_READY">设备还未就绪</string>
    <string name="GIZ_SDK_DEVICE_NOT_BINDED">设备还未绑定</string>
    <string name="GIZ_SDK_DEVICE_CONTROL_WITH_INVALID_COMMAND">设备操作指令中包含无效指令</string>
    <string name="GIZ_SDK_DEVICE_CONTROL_FAILED">设备操作失败</string>
    <string name="GIZ_SDK_DEVICE_GET_STATUS_FAILED">设备状态获取失败</string>
    <string name="GIZ_SDK_DEVICE_CONTROL_VALUE_TYPE_ERROR">设备操作指令参数类型错误</string>
    <string name="GIZ_SDK_DEVICE_CONTROL_VALUE_OUT_OF_RANGE">设备操作指令参数值不在有效范围内</string>
    <string name="GIZ_SDK_DEVICE_CONTROL_NOT_WRITABLE_COMMAND">设备操作指令中包含不可写指令</string>
    <string name="GIZ_SDK_BIND_DEVICE_FAILED">设备绑定失败</string>
    <string name="GIZ_SDK_UNBIND_DEVICE_FAILED">设备解绑失败</string>
    <string name="GIZ_SDK_DNS_FAILED">DNS解析失败</string>
    <string name="GIZ_SDK_M2M_CONNECTION_SUCCESS">M2M服务器连接成功</string>
    <string name="GIZ_SDK_SET_SOCKET_NON_BLOCK_FAILED">socket非阻塞设置失败</string>
    <string name="GIZ_SDK_CONNECTION_TIMEOUT">连接超时</string>
    <string name="GIZ_SDK_CONNECTION_REFUSED">连接被拒绝</string>
    <string name="GIZ_SDK_CONNECTION_ERROR">发生了连接错误</string>
    <string name="GIZ_SDK_CONNECTION_CLOSED">连接被对端关闭</string>
    <string name="GIZ_SDK_SSL_HANDSHAKE_FAILED">ssl握手失败</string>
    <string name="GIZ_SDK_DEVICE_LOGIN_VERIFY_FAILED">设备登录验证失败</string>
    <string name="GIZ_SDK_INTERNET_NOT_REACHABLE">手机外网无法访问</string>
    <string name="GIZ_SDK_HTTP_ANSWER_FORMAT_ERROR">HTTP应答格式错误</string>
    <string name="GIZ_SDK_HTTP_ANSWER_PARAM_ERROR">HTTP应答数据错误</string>
    <string name="GIZ_SDK_HTTP_SERVER_NO_ANSWER">HTTP服务端无应答</string>
    <string name="GIZ_SDK_HTTP_REQUEST_FAILED">HTTP请求失败</string>
    <string name="GIZ_SDK_OTHERWISE">其他错误</string>
    <string name="GIZ_SDK_MEMORY_MALLOC_FAILED">内存分配失败</string>
    <string name="GIZ_SDK_THREAD_CREATE_FAILED">线程创建失败</string>
    <string name="GIZ_SDK_USER_ID_INVALID">登录用户ID无效</string>
    <string name="GIZ_SDK_TOKEN_INVALID">登录token无效</string>
    <string name="GIZ_SDK_GROUP_ID_INVALID">设备分组的组ID无效</string>
    <string name="GIZ_SDK_GROUPNAME_INVALID">设备分组的组名称无效</string>
    <string name="GIZ_SDK_GROUP_PRODUCTKEY_INVALID">设备分组的组类型无效</string>
    <string name="GIZ_SDK_GROUP_FAILED_DELETE_DEVICE">设备分组删除失败</string>
    <string name="GIZ_SDK_GROUP_FAILED_ADD_DEVICE">设备分组添加失败</string>
    <string name="GIZ_SDK_GROUP_GET_DEVICE_FAILED">设备分组获取失败</string>
    <string name="GIZ_SDK_DATAPOINT_NOT_DOWNLOAD">设备数据点配置文件还未下载</string>
    <string name="GIZ_SDK_DATAPOINT_SERVICE_UNAVAILABLE">设备数据点配置服务不可用</string>
    <string name="GIZ_SDK_DATAPOINT_PARSE_FAILED">设备数据点解析失败</string>
    <string name="GIZ_SDK_SDK_NOT_INITIALIZED">SDK还未初始化</string>
    <string name="GIZ_SDK_APK_CONTEXT_IS_NULL">Android context为空，无法启动SDK</string>
    <string name="GIZ_SDK_APK_PERMISSION_NOT_SET">使用SDK所需要的Android权限还没有设置</string>
    <string name="GIZ_SDK_CHMOD_DAEMON_REFUSED">SDK后台服务进程的执行权限修改失败</string>
    <string name="GIZ_SDK_EXEC_DAEMON_FAILED">SDK后台服务进程启动失败</string>
    <string name="GIZ_SDK_EXEC_CATCH_EXCEPTION">SDK后台服务进程启动发生异常</string>
    <string name="GIZ_SDK_APPID_IS_EMPTY">AppID为空，无法使用SDK</string>
    <string name="GIZ_SDK_UNSUPPORTED_API">此API已废弃，不再提供支持</string>
    <string name="GIZ_SDK_REQUEST_TIMEOUT">SDK接口执行超时</string>
    <string name="GIZ_SDK_DAEMON_VERSION_INVALID">SDK后台服务版本无效</string>
    <string name="GIZ_SDK_PHONE_NOT_CONNECT_TO_SOFTAP_SSID">手机没有连接设备热点</string>
    <string name="GIZ_SDK_DEVICE_CONFIG_SSID_NOT_MATCHED">手机当前Wifi与设备配网SSID不匹配，无法完成设备配网</string>
    <string name="GIZ_SDK_NOT_IN_SOFTAPMODE">设备没有在softap配网模式下</string>
    <string name="GIZ_SDK_PHONE_WIFI_IS_UNAVAILABLE">手机当前不是Wifi网络</string>
    <string name="GIZ_SDK_RAW_DATA_TRANSMIT">当前为原始数据透传方式</string>
    <string name="GIZ_SDK_PRODUCT_IS_DOWNLOADING">正在下载设备数据点配置文件</string>
    <string name="GIZ_SDK_START_SUCCESS">SDK启动成功</string>
    <string name="GIZ_SITE_PRODUCTKEY_INVALID">产品类型标识码无效</string>
    <string name="GIZ_SITE_DATAPOINTS_NOT_DEFINED">产品数据点未定义</string>
    <string name="GIZ_SITE_DATAPOINTS_NOT_MALFORME">产品数据点无效</string>
    <string name="GIZ_OPENAPI_MAC_ALREADY_REGISTERED">设备MAC已经注册</string>
    <string name="GIZ_OPENAPI_PRODUCT_KEY_INVALID">产品类型标识码无效</string>
    <string name="GIZ_OPENAPI_APPID_INVALID">AppID无效</string>
    <string name="GIZ_OPENAPI_TOKEN_INVALID">用户token无效</string>
    <string name="GIZ_OPENAPI_USER_NOT_EXIST">用户不存在</string>
    <string name="GIZ_OPENAPI_TOKEN_EXPIRED">用户token已过期</string>
    <string name="GIZ_OPENAPI_M2M_ID_INVALID">M2M ID无效</string>
    <string name="GIZ_OPENAPI_SERVER_ERROR">服务发生错误</string>
    <string name="GIZ_OPENAPI_CODE_EXPIRED">验证码已过期</string>
    <string name="GIZ_OPENAPI_CODE_INVALID">验证码无效</string>
    <string name="GIZ_OPENAPI_SANDBOX_SCALE_QUOTA_EXHAUSTED">未发布状态下没有配额</string>
    <string name="GIZ_OPENAPI_PRODUCTION_SCALE_QUOTA_EXHAUSTED">发布状态下没有配额</string>
    <string name="GIZ_OPENAPI_PRODUCT_HAS_NO_REQUEST_SCALE">发布状态下没有设置配额</string>
    <string name="GIZ_OPENAPI_DEVICE_NOT_FOUND">找不到对应的设备</string>
    <string name="GIZ_OPENAPI_FORM_INVALID">请求数据格式无效</string>
    <string name="GIZ_OPENAPI_DID_PASSCODE_INVALID">设备的DID或验证码无效</string>
    <string name="GIZ_OPENAPI_DEVICE_NOT_BOUND">设备未绑定</string>
    <string name="GIZ_OPENAPI_PHONE_UNAVALIABLE">手机号已注册</string>
    <string name="GIZ_OPENAPI_USERNAME_UNAVALIABLE">用户名已注册</string>
    <string name="GIZ_OPENAPI_USERNAME_PASSWORD_ERROR">用户名或密码错误</string>
    <string name="GIZ_OPENAPI_SEND_COMMAND_FAILED">指令发送失败</string>
    <string name="GIZ_OPENAPI_EMAIL_UNAVALIABLE">邮箱已注册</string>
    <string name="GIZ_OPENAPI_DEVICE_DISABLED">设备已注销</string>
    <string name="GIZ_OPENAPI_FAILED_NOTIFY_M2M">M2M通知失败</string>
    <string name="GIZ_OPENAPI_ATTR_INVALID">属性无效</string>
    <string name="GIZ_OPENAPI_USER_INVALID">用户名无效</string>
    <string name="GIZ_OPENAPI_FIRMWARE_NOT_FOUND">找不到设备固件</string>
    <string name="GIZ_OPENAPI_JD_PRODUCT_NOT_FOUND">找不到京东产品信息</string>
    <string name="GIZ_OPENAPI_DATAPOINT_DATA_NOT_FOUND">找不到对应的设备数据点数据</string>
    <string name="GIZ_OPENAPI_SCHEDULER_NOT_FOUND">找不到计划任务</string>
    <string name="GIZ_OPENAPI_QQ_OAUTH_KEY_INVALID">QQ登录授权key无效</string>
    <string name="GIZ_OPENAPI_OTA_SERVICE_OK_BUT_IN_IDLE">OTA升级服务闲置或被禁用</string>
    <string name="GIZ_OPENAPI_BT_FIRMWARE_UNVERIFIED">BT固件未验证</string>
    <string name="GIZ_OPENAPI_BT_FIRMWARE_NOTHING_TO_UPGRADE">BT固件不需要升级</string>
    <string name="GIZ_OPENAPI_SAVE_KAIROSDB_ERROR">kairosdb存储错误</string>
    <string name="GIZ_OPENAPI_EVENT_NOT_DEFINED">事件未定义</string>
    <string name="GIZ_OPENAPI_SEND_SMS_FAILED">手机短信发送失败</string>
    <string name="GIZ_OPENAPI_APPLICATION_AUTH_INVALID">应用授权无效</string>
    <string name="GIZ_OPENAPI_NOT_ALLOWED_CALL_API">不允许使用已废弃的API</string>
    <string name="GIZ_OPENAPI_BAD_QRCODE_CONTENT">QRCode内容已损坏</string>
    <string name="GIZ_OPENAPI_REQUEST_THROTTLED">请求频率过高，请稍后再试</string>
    <string name="GIZ_OPENAPI_DEVICE_OFFLINE">设备已离线</string>
    <string name="GIZ_OPENAPI_TIMESTAMP_INVALID">时间戳无效</string>
    <string name="GIZ_OPENAPI_SIGNATURE_INVALID">应用签名无效</string>
    <string name="GIZ_OPENAPI_DEPRECATED_API">API已废弃</string>
    <string name="GIZ_OPENAPI_RESERVED">保留的错误字</string>
    <string name="GIZ_PUSHAPI_BODY_JSON_INVALID">数据体无效</string>
    <string name="GIZ_PUSHAPI_DATA_NOT_EXIST">数据不存在</string>
    <string name="GIZ_PUSHAPI_NO_CLIENT_CONFIG">客户端没有配置推送ID</string>
    <string name="GIZ_PUSHAPI_NO_SERVER_DATA">没有服务端数据</string>
    <string name="GIZ_PUSHAPI_GIZWITS_APPID_EXIST">机智云AppID已经存在</string>
    <string name="GIZ_PUSHAPI_PARAM_ERROR">参数错误</string>
    <string name="GIZ_PUSHAPI_AUTH_KEY_INVALID">授权无效</string>
    <string name="GIZ_PUSHAPI_APPID_OR_TOKEN_ERROR">AppID或用户token错误</string>
    <string name="GIZ_PUSHAPI_TYPE_PARAM_ERROR">参数类型错误</string>
    <string name="GIZ_PUSHAPI_ID_PARAM_ERROR">ID参数错误</string>
    <string name="GIZ_PUSHAPI_APPKEY_SECRETKEY_INVALID">APIKey或者SecretKey无效</string>
    <string name="GIZ_PUSHAPI_CHANNELID_ERROR_INVALID">Channel ID 错误</string>
    <string name="GIZ_PUSHAPI_PUSH_ERROR">推送错误</string>
    <string name="UNKNOWN_ERROR">未知错误</string>
    <string name="GIZ_OPENAPI_REGISTER_IS_BUSY">正在注册</string>
    <string name="GIZ_OPENAPI_CANNOT_SHARE_TO_SELF">不能把设备分享给自己</string>
    <string name="GIZ_OPENAPI_ONLY_OWNER_CAN_SHARE">只有主账号才能分享设备</string>
    <string name="GIZ_OPENAPI_NOT_FOUND_GUEST">找不到子账号</string>
    <string name="GIZ_OPENAPI_GUEST_ALREADY_BOUND">子账号已经绑定</string>
    <string name="GIZ_OPENAPI_NOT_FOUND_SHARING_INFO">找不到分享记录</string>
    <string name="GIZ_OPENAPI_NOT_FOUND_THE_MESSAGE">找不到消息记录</string>
    <string name="GIZ_OPENAPI_SHARING_IS_WAITING_FOR_ACCEPT">等待被分享者接受分享邀请</string>
    <string name="GIZ_OPENAPI_SHARING_IS_EXPIRED">分享邀请已过期</string>
    <string name="GIZ_OPENAPI_SHARING_IS_COMPLETED">分享邀请已被接受或拒绝了</string>
    <string name="GIZ_OPENAPI_INVALID_SHARING_BECAUSE_UNBINDING">设备已被解绑，设备分享已无效</string>
    <string name="GIZ_OPENAPI_ONLY_OWNER_CAN_BIND">只有主账号才能绑定设备</string>
    <string name="GIZ_OPENAPI_ONLY_OWNER_CAN_OPERATE">只有主账号才能解绑其他用户或者取消共享</string>
    <string name="GIZ_OPENAPI_SHARING_ALREADY_CANCELLED">分享邀请已经被取消</string>
</resources>