<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="#ececec"
    android:layout_height="match_parent">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:titleTextColor="#ffffff"
        />
    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:overScrollMode="never"
        android:layout_below="@+id/toolBar"
        android:visibility="gone"
        />
    <LinearLayout
        android:id="@+id/empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        >
        <ImageView
            android:id="@+id/img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/empty"/>
        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="暂无蓝牙设配"
            android:textColor="#8a8a8a"
            android:layout_marginTop="-20dp"
            android:textSize="12sp" />
        <com.dd.CircularProgressButton
            android:id="@+id/circular"
            android:layout_width="match_parent"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_height="wrap_content"
            app:cpb_cornerRadius="6dp"
            android:textSize="14sp"
            app:cpb_textComplete="@string/Complete"
            app:cpb_textError="@string/Error"
            app:cpb_textIdle="@string/Upload"
            android:layout_marginTop="20dp"
            android:textColor="@color/white"
            android:background="#cccccc"
            app:cpb_selectorIdle="@drawable/idle_state_selector" />
    </LinearLayout>
</RelativeLayout>