<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/rl_all"
    android:layout_height="match_parent" >
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimaryDark">
        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:text="@string/app_name"
            />
    </android.support.v7.widget.Toolbar>
    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/toolBar"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="1dp"
        android:layout_marginTop="50dp"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="21dp"
            android:layout_marginRight="2dp"
            android:src="@drawable/phone" />

        <EditText
            android:id="@+id/etName"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="19dp"
            android:background="@null"
            android:ems="10"
            android:hint="@string/name_hint"
            android:textColor="@color/black"
            android:textColorHint="@color/text_gray_light"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/linearLayout1"
        android:layout_centerHorizontal="true"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="22dp"
            android:src="@drawable/login_password" />

        <EditText
            android:id="@+id/etPsw"
            style="@style/EditTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="22dp"
            android:layout_weight="1"
            android:background="@null"
            android:ems="10"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:textColorHint="@color/text_gray_light"
            android:textSize="14sp" />
    </LinearLayout>

    <!--<TextView-->
        <!--android:id="@+id/tvForget"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_alignParentRight="true"-->
        <!--android:layout_below="@+id/linearLayout2"-->
        <!--android:layout_marginRight="15dp"-->
        <!--android:layout_marginTop="15dp"-->
        <!--android:text="@string/forget_password"-->
        <!--android:textColor="@color/black" />-->

    <TextView
        android:id="@+id/tvRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/linearLayout2"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/register"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/tvRegister"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:background="@drawable/goto_btn"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textColor="@color/white"
        android:text="@string/login" />

</RelativeLayout>